--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1 class="heading">Simon Game</h1>
+    <h1 class="heading">Simons Game</h1>
     <h3>Press any key to start</h3>
     <main>
       <div class="box">
